Just use readlink and keep it simple

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "devDependencies": {},
   "directories": {
     "lib": "src",
-    "bin": "bin",
     "cache": ".lumo-cache"
+  },
+  "bin": {
+    "fly-exec": "./bin/fly-exec"
   },
   "author": "John Shahid",
   "license": "MIT"
